fix: Content-Type 기본값 변경